<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".mvp.mailsetup.EmailSetupActivitity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-5dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_50"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/intputHostLayout"
            style="@style/StyleTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputHost"
                style="@style/StyleEditText"
                android:hint="@string/hint_host"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:text="outlook.office365.com" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputStoreTypeLayout"
            style="@style/StyleTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputStoreType"
                style="@style/StyleEditText"
                android:enabled="false"
                android:focusable="false"
                android:hint="@string/hint_store_type"
                android:text="pop3" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputPortLayout"
            style="@style/StyleTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputPort"
                style="@style/StyleEditText"
                android:hint="@string/hint_port"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:text="995" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputUsernameLayout"
            style="@style/StyleTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputUsername"
                style="@style/StyleEditText"
                android:hint="@string/hint_username"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputPasswordLayout"
            style="@style/StyleTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputPassword"
                style="@style/StyleEditText"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                style="@style/StyleButton"
                android:layout_weight="1"
                android:text="@string/btn_cancel" />

            <Button
                android:id="@+id/btn_submit"
                style="@style/StyleButton"
                android:layout_weight="1"
                android:text="@string/btn_submit" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
